--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
     <div id="copyMessage" class="copy-message">
       <img src="./img/Check_out.svg" alt="✔" />
-      <span>Command copied successfully!</span>
+      <span>Command copied !</span>
     </div>
 
     <script>
